fixes button UI issue on Safari

--- a/themes/yunohost-docs/scss/theme/_global.scss
+++ b/themes/yunohost-docs/scss/theme/_global.scss
@@ -299,4 +299,5 @@ body .off-canvas .learn-sidebar .learn-nav ul li ul li.active > a {
   border: 0;
   font-size: 0.9em;
   line-height: 1.58;
+  -webkit-appearance: none;
 }
